CHORE: langchain tools and routing examples

--- a/langchain/notebooks/langchain_openai_function_calling.ipynb
+++ b/langchain/notebooks/langchain_openai_function_calling.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "fb021140",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
     "# Create ChatOpenAI instance\n",
     "llm = ChatOpenAI(\n",
     "    base_url=\"http://localhost:1234/v1\",\n",
-    "    model=\"deepseek/deepseek-r1-0528-qwen3-8b\", \n",
+    "    model=\"qwen/qwen3-4b-2507\", # deepseek/deepseek-r1-0528-qwen3-8b\n",
     "    api_key=\"dummy\",\n",
     "    temperature=0)\n",
     "\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6df7a86a",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
     "# Create ChatOpenAI instance\n",
     "llm = ChatOpenAI(\n",
     "    base_url=\"http://localhost:1234/v1\",\n",
-    "    model=\"deepseek/deepseek-r1-0528-qwen3-8b\", \n",
+    "    model=\"qwen/qwen3-4b-2507\", # deepseek/deepseek-r1-0528-qwen3-8b\n",
     "    api_key=\"dummy\",\n",
     "    temperature=0)\n",
     "\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "979f4672",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
     "\n",
     "extraction_llm = ChatOpenAI(\n",
     "    base_url=\"http://localhost:1234/v1\",\n",
-    "    model=\"deepseek/deepseek-r1-0528-qwen3-8b\", # \"meta-llama-3.1-8b-instruct\", \n",
+    "    model=\"qwen/qwen3-4b-2507\", # deepseek/deepseek-r1-0528-qwen3-8b, \"meta-llama-3.1-8b-instruct\", \n",
     "    api_key=\"dummy\",\n",
     "    temperature=0)\n",
     "\n",
