--- a/langchain/notebooks/openai_function_calling.ipynb
+++ b/langchain/notebooks/openai_function_calling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "027af072",
    "metadata": {},
    "outputs": [
@@ -11,12 +11,14 @@
      "output_type": "stream",
      "text": [
       "Available models:\n",
-      "- deepseek/deepseek-r1-0528-qwen3-8b\n",
+      "- text-embedding-nomic-embed-text-v1.5\n",
+      "- qwen/qwen3-4b-2507\n",
+      "- meta-llama-3.1-8b-instruct\n",
       "- text-embedding-bge-small-en-v1.5\n",
       "- text-embedding-all-minilm-l6-v2-embedding\n",
+      "- deepseek/deepseek-r1-0528-qwen3-8b\n",
       "- qwen/qwen3-4b-thinking-2507\n",
-      "- llama-3.2-3b-instruct\n",
-      "- text-embedding-nomic-embed-text-v1.5\n"
+      "- llama-3.2-3b-instruct\n"
      ]
     }
    ],
@@ -39,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "490c8054",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"deepseek/deepseek-r1-0528-qwen3-8b\""
+    "model_name = \"qwen/qwen3-4b-2507\", # deepseek/deepseek-r1-0528-qwen3-8b"
    ]
   },
   {
